@@ -2,8 +2,9 @@
 
 	* Removed #ifdef LINUX|SOLARIS in src/eyedb/OString.cc and src/eyedb/utilsmthfe.cc. Added necessary tests in configure.in
 	* Changed HAS_FATTACH to standard HAVE_FATTACH
-	* Remove M_strsignal (assumed that all platforms have strsignal, if not we'll see)
-	* Remove non-posix thread code in src/lib/rpcdb.cc (assume that all platforms have Posix threads)
+	* Removed M_strsignal (assumed that all platforms have strsignal, if not we'll see)
+	* Removed non-posix thread code in src/lib/rpcdb.cc (assume that all platforms have Posix threads)
+	* Removed getrlimit code and #ifdef SOLARIS in src/lib/m_mem.cc
 	
 2006-03-07 Francois Dechelle <francois@dechelle.net>
 
